[package]
name = "elevenlabs_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialisation & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Gestion d'erreurs
anyhow = "1"
