[package]
name = "dashboard_nmea_0183"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Parsing NMEA 0183
nmea = "0.7"

# Sérialisation & config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Gestion d'erreurs
anyhow = "1"
